--- a/Exploration.ipynb
+++ b/Exploration.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,35 +80,261 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m~/Documents/Playground/RecipeApp/RecipeAppVenv/lib/python3.9/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[1;32m   3806\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
-      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'text'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[14], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m Sample_Embeddings \u001b[38;5;241m=\u001b[39m \u001b[43membed_data_with_sentence_transformers\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43msample_set.csv\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mmodel_name\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mall-MiniLM-L6-v2\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "Cell \u001b[0;32mIn[13], line 5\u001b[0m, in \u001b[0;36membed_data_with_sentence_transformers\u001b[0;34m(csv_file, model_name)\u001b[0m\n\u001b[1;32m      3\u001b[0m df \u001b[38;5;241m=\u001b[39m pd\u001b[38;5;241m.\u001b[39mread_csv(csv_file)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;66;03m# Assuming the text to be embedded is in the 'text' column\u001b[39;00m\n\u001b[0;32m----> 5\u001b[0m texts \u001b[38;5;241m=\u001b[39m \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtext\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39mtolist()\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Load the model\u001b[39;00m\n\u001b[1;32m      7\u001b[0m model \u001b[38;5;241m=\u001b[39m SentenceTransformer(model_name)\n",
-      "File \u001b[0;32m~/Documents/Playground/RecipeApp/RecipeAppVenv/lib/python3.9/site-packages/pandas/core/frame.py:4090\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4088\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[1;32m   4089\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4090\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[1;32m   4091\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4092\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m~/Documents/Playground/RecipeApp/RecipeAppVenv/lib/python3.9/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(casted_key, \u001b[39mslice\u001b[39m) \u001b[39mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[39misinstance\u001b[39m(casted_key, abc\u001b[39m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39many\u001b[39m(\u001b[39misinstance\u001b[39m(x, \u001b[39mslice\u001b[39m) \u001b[39mfor\u001b[39;00m x \u001b[39min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[39mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'text'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches: 100%|██████████| 698/698 [01:15<00:00,  9.22it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embeddings saved to IngredientsEmbeddings.csv\n"
      ]
     }
    ],
    "source": [
     "ingredients_embedings = embed_data_with_sentence_transformers(csv_file = \"sample_set.csv\", model_name='all-MiniLM-L6-v2', file_column ='ingredients')\n",
     "save_embeddings_to_csv(embeddings = ingredients_embedings, output_file = \"IngredientsEmbeddings.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches: 100%|██████████| 698/698 [01:09<00:00, 10.04it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Embeddings saved to DirectionsEmbeddings.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "directions_embedings = embed_data_with_sentence_transformers(csv_file = \"sample_set.csv\", model_name='all-MiniLM-L6-v2', file_column ='directions')\n",
+    "save_embeddings_to_csv(embeddings = directions_embedings, output_file = \"DirectionsEmbeddings.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_faiss_index(embeddings, column_name):\n",
+    "    # Dimension of the vectors\n",
+    "    d = embeddings.shape[1]\n",
+    "    # Creating a FAISS index\n",
+    "    # Here we use IndexFlatL2 which is good for general purposes. \n",
+    "    # You might want to explore other indices depending on your specific needs.\n",
+    "    index = faiss.IndexFlatL2(d)\n",
+    "    # FAISS expects vectors in float32\n",
+    "    embeddings = embeddings.astype('float32')\n",
+    "    # Adding vectors to the index\n",
+    "    index.add(embeddings)\n",
+    "    # Save the index to a file\n",
+    "    index_file_path = str(column_name) + \".faiss\"\n",
+    "    faiss.write_index(index, index_file_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_faiss_index(ingredients_embedings, 'ingredients')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "create_faiss_index(directions_embedings, 'directions')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import faiss\n",
+    "from sentence_transformers import SentenceTransformer\n",
+    "\n",
+    "class EmbeddingSearcher:\n",
+    "    def __init__(self, model_name, index_file, sample_df):\n",
+    "        # Load the Sentence Transformer model\n",
+    "        self.model = SentenceTransformer(model_name)\n",
+    "        # Load the FAISS index\n",
+    "        self.index = faiss.read_index(index_file)\n",
+    "        # Store the sample DataFrame\n",
+    "        self.sample_df = sample_df\n",
+    "    \n",
+    "    def embed_and_search(self, text, top_n=5):\n",
+    "        # Embed the text\n",
+    "        query_embedding = self.model.encode([text], convert_to_tensor=True, show_progress_bar=True).cpu().numpy()\n",
+    "        \n",
+    "        # Search the index\n",
+    "        distances, indices = self.index.search(query_embedding, top_n)\n",
+    "        \n",
+    "        # Print the full rows for the indices found\n",
+    "        for idx in indices[0]:\n",
+    "            # Use iloc to access the DataFrame row and print it\n",
+    "            print(self.sample_df.iloc[idx])\n",
+    "\n",
+    "        return indices[0], distances[0]\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches: 100%|██████████| 1/1 [00:00<00:00, 35.51it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unnamed: 0                                                 83018\n",
+      "title                                   Red Potato And Egg Salad\n",
+      "ingredients    [\"6 red potatoes, boiled and cut in half\", \"3 ...\n",
+      "directions     [\"Combine the potatoes, eggs, scallions and ca...\n",
+      "link             www.cookbooks.com/Recipe-Details.aspx?id=491476\n",
+      "source                                                  Gathered\n",
+      "NER            [\"red potatoes\", \"eggs\", \"scallion\", \"carrot\",...\n",
+      "Name: 15358, dtype: object\n",
+      "Unnamed: 0                                               2061185\n",
+      "title                                Parmesan Au Gratin Potatoes\n",
+      "ingredients    [\"5 large un peeled red potatoes, cooked in be...\n",
+      "directions     [\"Remove cooled potatos from broth, peel and c...\n",
+      "link           cookpad.com/us/recipes/340549-parmesan-au-grat...\n",
+      "source                                                 Recipes1M\n",
+      "NER            [\"red potatoes\", \"flour\", \"butter\", \"chicken s...\n",
+      "Name: 11171, dtype: object\n",
+      "Unnamed: 0                                               1538333\n",
+      "title                                 Honey-Mustard Potato Salad\n",
+      "ingredients    [\"5 pounds red potatoes\", \"2 cups chopped cele...\n",
+      "directions     [\"Place potatoes in a saucepan and cover with ...\n",
+      "link           www.tasteofhome.com/recipes/honey-mustard-pota...\n",
+      "source                                                  Gathered\n",
+      "NER            [\"red potatoes\", \"celery\", \"sweet red pepper\",...\n",
+      "Name: 4930, dtype: object\n",
+      "Unnamed: 0                                               1207287\n",
+      "title                            Pan Roasted Chicken And Veggies\n",
+      "ingredients    [\"1 1/2 lbs red potatoes, cut into 1 1/2-inch ...\n",
+      "directions     [\"Preheat oven to 475\\u00b0F.\", \"In large roas...\n",
+      "link           www.food.com/recipe/pan-roasted-chicken-and-ve...\n",
+      "source                                                  Gathered\n",
+      "NER            [\"red potatoes\", \"onion\", \"garlic\", \"olive oil...\n",
+      "Name: 3161, dtype: object\n",
+      "Unnamed: 0                                               1562958\n",
+      "title                               Quiche With Hash Brown Crust\n",
+      "ingredients    [\"3 whole Medium Size Potatoes, Washed, Peeled...\n",
+      "directions     [\"Preheat the oven to 325 F.\", \"Squeeze shredd...\n",
+      "link           tastykitchen.com/recipes/breakfastbrunch/quich...\n",
+      "source                                                  Gathered\n",
+      "NER            [\"Potatoes\", \"Salt\", \"Black Pepper\", \"Hot Sauc...\n",
+      "Name: 18025, dtype: object\n",
+      "Indices of top N most similar items: [15358 11171  4930  3161 18025]\n",
+      "Corresponding distances: [0.5327559  0.54329157 0.5460544  0.5489533  0.5581025 ]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming 'sample_set.csv' is the CSV file containing your sample set\n",
+    "sample_df = pd.read_csv('sample_set.csv')\n",
+    "# Example usage:\n",
+    "# Initialize the searcher with the model, index, and sample DataFrame\n",
+    "searcher = EmbeddingSearcher(model_name='all-MiniLM-L6-v2', index_file='ingredients.faiss', sample_df=sample_df)\n",
+    "\n",
+    "# The text you want to search for similar items\n",
+    "query_text = \"Give me a recipe I can make with potatos, cumin, chicken thigh, bell peppers, and red wine.\"\n",
+    "\n",
+    "# Perform the embedding and search, which now also prints the relevant rows\n",
+    "indices, distances = searcher.embed_and_search(query_text, top_n=5)\n",
+    "\n",
+    "\n",
+    "print(\"Indices of top N most similar items:\", indices)\n",
+    "print(\"Corresponding distances:\", distances)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Batches: 100%|██████████| 1/1 [00:00<00:00,  1.61it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Indices of top N most similar items: [15358 11171  4930  3161 18025]\n",
+      "Corresponding distances: [0.5327559  0.54329157 0.5460544  0.5489533  0.5581025 ]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Assuming 'sample_set.csv' is the CSV file containing your sample set\n",
+    "sample_df = pd.read_csv('sample_set.csv')\n",
+    "# Example usage:\n",
+    "# Initialize the searcher with the model and index you have prepared\n",
+    "searcher = EmbeddingSearcher(model_name='all-MiniLM-L6-v2', index_file='ingredients.faiss')\n",
+    "\n",
+    "# The text you want to search for similar items\n",
+    "query_text = \"Give me a recipe I can make with potatos, cumin, chicken thigh, bell peppers, and red wine.\"\n",
+    "\n",
+    "# Perform the embedding and search\n",
+    "indices, distances = searcher.embed_and_search(query_text, top_n=5)\n",
+    "\n",
+    "print(\"Indices of top N most similar items:\", indices)\n",
+    "print(\"Corresponding distances:\", distances)"
    ]
   },
   {
